--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                 <div class="card-body">
                   <p class="card-text fs-5">CRUD Application</p>
                   <div class="card-pro">
-                    <a href="#"
+                    <a href="crud.html"
                       >View <i class="bx bx-right-arrow-circle mx-1"></i
                     ></a>
                   </div>
